# AI-Project-Manager-Agent

./: .env.example  .gitattributes  .gitignore  IMPLEMENTATION PLAN.MD  IMPLEMENTATION%20PLAN.MD  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  fake_provider.py  openai_provider.py  provider.py  validation.py
backend/app/api/: health.py  router.py
backend/app/auth/: __init__.py  dependencies.py  policies.py  security.py
backend/app/cli/: __init__.py  create_user.py
backend/app/core/: config.py  errors.py  hashing.py
backend/app/db/: base.py  session.py
backend/app/domain/: __init__.py  calendar.py  graph.py  health.py  monitoring.py  priority.py  progress.py  scheduler.py
backend/app/schemas/: auth.py  execution.py  plan.py  project.py  run.py
backend/app/services/: approval.py  audit.py  execution.py  jobs.py  monitoring.py  plan_content.py  plan_quality.py  plan_validation.py  planning.py  planning_context.py  plans.py  projects.py  runs.py
backend/app/workers/: main.py
backend/app/workflows/: __init__.py  engine.py  monitoring.py  planning.py  planning_nodes.py  state.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_identity.py  0002_project_intake.py  0003_audit.py  0004_ai_contracts.py  0005_planning_workflow_create_persistent_planning_workflow_.py  0006_plan_lifecycle_add_plan_lifecycle_approvals_and_.py  0007_active_execution.py
backend/tests/: conftest.py  test_config.py  test_health.py
backend/tests/ai/: __init__.py  (+7 more)
(+121 files in other folders)
