[project]
name = "ai-project-manager-api"
version = "0.5.0"
description = "Stateful AI project planning and monitoring API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic==1.18.5",
    "argon2-cffi==25.1.0",
    "email-validator==2.3.0",
    "fastapi==0.139.2",
    "openai==2.47.0",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==2.3.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.22",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q --strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]
markers = ["postgres: requires an explicit PostgreSQL test database"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
